# spam-email-detection-system

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.streamlit/: config.toml
app/: app.py  ui.py
artifacts/: bulk_predictions.xlsx  metrics.json  vectorizer.pkl
artifacts/models/: logistic_regression.pkl  naive_bayes.pkl
data/: README_DATASET.md  dataset.csv  dataset.xlsx  sample_bulk_input.xlsx
model/: evaluate.py  predict.py  train.py
nlp/: preprocess.py  vectorizer.py
scripts/: healthcheck.py
tests/: smoke_test.py
utils/: helpers.py
