[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-detector-nlp-ml"
version = "1.0.0"
description = "Production-ready spam email detection system using classical NLP and machine learning."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Benjamin Arnoco"}
]
dependencies = [
  "streamlit>=1.40,<2.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.5,<2.0",
  "nltk>=3.9,<4.0",
  "openpyxl>=3.1,<4.0",
  "xlrd>=2.0,<3.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app", "model", "nlp", "utils"]
